# MoMoney

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  README.md  app.py  database.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/domain/groups/: entity.py  routes.py  schemas.py
backend/domain/invoice_extractions/: routes.py
backend/domain/invoices/: entity.py  routes.py
backend/domain/users/: routes.py
backend/services/: extraction_services.py  gemini_services.py  llm_config.py
backend/services/dependencies/: database.py
backend/tests/: conftest.py  test_extraction_services.py  test_invoice_extractions.py
frontend/: Dockerfile  openapi.json  package-lock.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.jsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/groups/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthProvider.tsx
frontend/src/components/layout/: Appshell.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/modals/: ColumnConfigModal.tsx  CreateGroupModal.tsx  CreateSpreadsheetModal.tsx
frontend/src/components/spreadsheet/: SpreadsheetTable.tsx
frontend/src/components/ui/: Icon.tsx
frontend/src/components/upload/: AIProcessing.tsx  ReceiptPreview.tsx  UploadDropzone.tsx  UploadSteps.tsx
frontend/src/lib/: api.ts  data.ts  store.ts
frontend/src/lib/hooks/: useAuth.ts
frontend/src/types/: index.ts
(+3 files in other folders)
