[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3.2,<2.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi[standard]>=0.115.0,<1.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "openai>=1.52.0,<2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.31.0",
    "sqlmodel>=0.0.22,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
]
